# 42Lausanne

./: README.md
cube3d/: Makefile  cub3D
ft_irc/: Makefile  README.md  ircserv
ft_printf/: ft_printf.c  ft_printf_utils_c.c  ft_printf_utils_i_d.c  ft_printf_utils_p.c  ft_printf_utils_s.c  ft_printf_utils_u.c
ft_transcendence/: .env.example
get_next_line/: get_next_line.h  get_next_line_utils.c
gnl/: a.out  get_next_line.c  get_next_line.h  get_next_line.h.gch  get_next_line_utils.c  text.txt
inception/: .env  Makefile
libft/: Makefile  a.out  ft_atoi.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_memccpy.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strdup  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c  ft_tolower.c  ft_toupper.c  (+2 more)
specialisation/gomoku/: .gitignore  README.md  main.py  pyproject.toml
specialisation/gomoku/src/algo/: get_move.py
specialisation/gomoku/src/game/: gomoku.py  playerTokens.py
specialisation/gomoku/src/ui/: render.py
specialisation/leaffliction/: .gitignore  README.md  help.txt  pyproject.toml  signature.txt
specialisation/leaffliction/src/: augmentation.py  distribution.py  predict.py  train.py  transformation.py
specialisation/leaffliction/src/utils/: process_augment.py
specialisation/multilayer-perceptron/: README.md  model.npy  pyproject.toml
specialisation/multilayer-perceptron/data/: training_losses.npy  validation_losses.npy
specialisation/multilayer-perceptron/src/: data_loader.py  graph.py  predict.py  split.py  train.py  utils.py
specialisation/multilayer-perceptron/src/network/: create.py
specialisation/total_perspective_vortex/: README  main copy.ipynb  main.ipynb  model.joblib  pyproject.toml  result.txt
specialisation/total_perspective_vortex/src/: csp.py  main.py  predict.py  train.py
(+812 files in other folders)
