[tool.poetry]
name = "multilayer-perceptron"
version = "0.1.0"
description = ""
authors = ["jreivilo <j.@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
numpy = "^1.26.4"
scikit-learn = "^1.4.1.post1"
matplotlib = "^3.8.3"
cprint = "^1.2.2"
pip = "^24.0"
install = "^1.3.5"
termcolor = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
