[tool.poetry]
name = "total_perspective_vortex"
version = "0.1.0"
description = ""
authors = ["jreivilo <j@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.8.2"
mne = "^1.6.0"
numpy = "^1.26.4"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
lightgbm = "^4.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
